<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_login">

    <fragment
        android:id="@+id/nav_order_list"
        android:name="com.example.geministore.ui.orderList.OrderListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_order_list" >
        <action
            android:id="@+id/action_nav_order_list_to_nav_order"
            app:destination="@id/nav_order" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.geministore.ui.urovo.UrovoFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_setting_urovo" />

    <fragment
        android:id="@+id/nav_order"
        android:name="com.example.geministore.ui.order.OrderFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_order"/>


    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.geministore.ui.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login"/>

</navigation>